<resources>
    <string name="app_name">Bank Management</string>
    <string name="wallet">Wallet</string>
    <string name="splash_decription">Money Transfer, Wallet &amp; Finance UI Kit</string>
    <string name="bat_dau_ngay">Bắt Đầu Ngay</string>
    <string name="title_onboarding1">Take hold of your finances</string>
    <string name="title_onboarding2">See where your money is going</string>
    <string name="title_onboarding3">Reach your goals with ease</string>
    <string name="desc_onboarding1">Nắm bắt tài chính của bạn một cách thông minh hơn</string>
    <string name="desc_onboarding2">Theo dõi hóa đơn và giao dịch một cách trực quan</string>
    <string name="desc_onboarding3">Tính năng tiết kiệm thông minh để quản lý mục tiêu và nhu cầu tương lai</string>
    <string name="_1_3">1/3</string>
    <string name="_2_3">2/3</string>
    <string name="_3_3">3/3</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="welcome">Welcome!</string>
    <string name="desc_welcome">Đăng ký và bắt đầu trãi nghiệm ngay nào</string>
    <string name="dang_ky">Đăng Ký</string>
    <string name="ho_va_ten">Họ</string>
    <string name="cmnd">CMND</string>
    <string name="ten">Tên</string>
    <string name="email">Email</string>
    <string name="mat_khau">Mật khẩu</string>
    <string name="confirm_password">Xác nhận mật khẩu</string>
    <string name="ban_da_co_tai_khoan">Bạn đã có tài khoản?</string>
    <string name="dang_nhap">Đăng Nhập</string>
    <string name="remember_accout">Nhớ mật khẩu</string>
    <string name="enter_your_phone">Vui lòng nhập <b>số điện thoại</b> để chúng tôi có thể xác minh bạn</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="ke_tiep">Kế tiếp</string>
    <string name="ma_xac_thuc">Mã Xác Thực</string>
    <string name="desc_verify_code">Chúng tôi đã gửi mã đến hộp thư SMS của bạn, vui lòng kiểm tra</string>
    <string name="sdt">0929113245</string>
    <string name="verify_code">Nhập mã xác thực ở đây</string>
    <string name="xac_nhan">Xác Nhận</string>
    <string name="desc_verified">Mọi thứ đã hoàn tất, ứng dụng đã sẵn sàng hoạt động</string>
    <string name="ban_chua_co_tai_khoan">Bạn chưa có tài khoản?</string>
    <string name="forgot_password"><u>Quên Mật Khẩu?</u></string>
    <string name="quen_mat_khau">Quên Mật Khẩu</string>
    <string name="manageBalance">Quản lý số dư</string>
    <string name="soTien">Số tiền</string>
    <string name="moneyTransfer">Chuyển tiền</string>
    <string name="so_tk">Số TK</string>
    <string name="desc_forgot_password">Vui lòng nhập <b>địa chỉ email</b> của bạn để khôi phục mật khẩu</string>

    <string name="title_activity_bank">BankActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register_failed">"Register failed"</string>

    <string name="action_show_more">action_show_more</string>
    <string name="action_show_nav">action_show_nav</string>
    <string name="nguyen_thanh_tu">Nguyễn Thanh Tú</string>
    <string name="tv_user_card_desc">account ending with 1545</string>
    <string name="iv_user_avatar">iv_user_avatar</string>
    <string name="bui_minh_to">Bùi Minh Tơ</string>
    <string name="nap_tien">Nạp tiền</string>
    <string name="rut_tien">Rút tiền</string>
    <string name="chuyen_tien">Chuyển tiền</string>
    <string name="so_du">Số dư</string>
    <string name="_1_000_000_000">1.000.000.000 VNĐ</string>
    <string name="giao_dich">Giao dịch</string>
    <string name="_10_000_000">10.000.000 VNĐ</string>
    <string name="recent_transaction">Giao dịch gần đây</string>
    <string name="chuyen_0921">Chuyển - 0921</string>
    <string name="_14_08_2022_04_29_pm">14/08/2022 04:29 PM</string>
    <string name="action_show_home">Trang Chủ</string>
    <string name="action_recharge">Nạp Tiền</string>
    <string name="action_withdraw">Rút Tiền</string>
    <string name="action_tranfer">Chuyển Tiền</string>
    <string name="trans_history">Lịch sử giao dịch</string>
    <string name="thong_tin_ca_nhan">Thông tin cá nhân</string>
    <string name="thay_doi_anh_dai_dien">Thay Đổi Ảnh Đại Diện</string>
    <string name="ho">Họ</string>
    <string name="dia_chi">Địa chỉ</string>
    <string name="gioi_tinh">Giới tính</string>
    <string name="ngay_cap_cmnd">Ngày cấp CMND</string>
    <string name="so_dien_thoai">Số điện thoại</string>
    <string name="cap_nhat">Cập Nhật</string>
    <string name="so_tien_giao_dich">SỐ TIỀN GIAO DỊCH</string>
    <string name="_0">0</string>
    <string name="_d">đ</string>
    <string name="so_tai_khoan">Số tài khoản</string>
    <string name="gui_den">Chuyển đến</string>

    <string-array name="phai">
        <item>Nam</item>
        <item>Nữ</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>