<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_700">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_img"
        android:layout_width="@dimen/_350dp"
        android:layout_height="@dimen/_311dp"
        android:src="@drawable/img_welcome"
        app:layout_constraintBottom_toTopOf="@id/tv_tilte"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_tilte"
        android:layout_width="@dimen/_282dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pacifico"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="@dimen/_44sp"
        app:layout_constraintBottom_toTopOf="@id/tv_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_img" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_description"
        android:layout_width="@dimen/_282dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10dp"
        android:fontFamily="@font/inter"
        android:text="@string/desc_welcome"
        android:textColor="@color/white"
        android:textSize="@dimen/_18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_tilte" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:layout_width="@dimen/_94dp"
        android:layout_height="@dimen/_114dp"
        android:layout_marginBottom="@dimen/_24dp"
        android:background="@drawable/selector_button_cirlce_white"
        android:fontFamily="@font/inter_medium"
        android:paddingBottom="@dimen/_20dp"
        android:src="@drawable/img_arrow_right"
        android:text="@string/next"
        android:textSize="@dimen/_14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>