<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_700">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_logo"
        android:layout_width="@dimen/_135dp"
        android:layout_height="@dimen/_147dp"
        android:src="@drawable/img_logo"
        app:layout_constraintBottom_toTopOf="@id/tv_logo_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_logo_name"
        android:layout_width="@dimen/_222dp"
        android:layout_height="@dimen/_78dp"
        android:layout_marginTop="@dimen/_24dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/wallet"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_65sp"
        app:layout_constraintBottom_toTopOf="@id/tv_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_logo" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_description"
        android:layout_width="@dimen/_222dp"
        android:layout_height="@dimen/_44dp"
        android:layout_marginBottom="@dimen/_56dp"
        android:fontFamily="@font/inter"
        android:text="@string/splash_decription"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_18sp"
        app:layout_constraintBottom_toTopOf="@id/b_get_started"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_logo_name" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/b_get_started"
        android:layout_width="@dimen/_332dp"
        android:layout_height="@dimen/_76dp"
        android:background="@drawable/selector_button_large_white"
        android:fontFamily="@font/roboto_bold"
        android:paddingBottom="@dimen/_19dp"
        android:text="@string/bat_dau_ngay"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/purple_700"
        android:textSize="@dimen/_18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_description" />

</androidx.constraintlayout.widget.ConstraintLayout>